--- a/Python_HRMS/config.json
+++ b/Python_HRMS/config.json
@@ -1,6 +1,6 @@
 ﻿{
   "db_path": "./data/hrms.db",
   "export_path": "./export",
-  "default_lang": "zh",
-  "version": "0.1.0"
+  "default_lang": "ja",
+  "version": "0.3.1"
 }
