--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "export_path": "./export",
   "version": "0.3.3",
   "app_name": "HRMS",
-  "theme": "light"
+  "theme": "light",
+  "nav_collapsed": false
 }
