Complie in Python 3.12.7 in Home

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "default_lang": "en",
+  "default_lang": "ja",
   "db_path": "./data/hrms.db",
   "export_path": "./export",
   "version": "0.3.3",
